# sqlmodel-testing

./: .gitignore  Taskfile.yml  hello.py  migrate.py  pyproject.toml
app/: db.py  main.py
app/models/: items.py
app/routers/: __init__.py  items.py  tasks.py
