[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115.4", "sqlmodel>=0.0.22", "uvicorn>=0.32.0"]

[dependency-groups]
dev = ["mypy>=1.13.0", "pytest>=8.3.3", "ruff>=0.7.2"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D206",  # docstring should be indented with spaces, not tabs
    "D300",  # Use """triple double quotes""".
    "B904",  # raise ... from ...
    "UP007", # use `f"{var}"` instead of `"{var}".format(var=var)`
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
